[package]
name = "po-rrt"
version = "0.1.0"
authors = ["Camille Phiquepal <camille.phiquepal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
itertools = "0.8"
image = "0.23.12"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rrt"
harness = false
