[package]
name = "po-rrt"
version = "0.1.0"
authors = ["Camille Phiquepal <camille.phiquepal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_pcg = "0.3.0"
itertools = "0.8"
image = "0.23.12"
queues = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
priority-queue = "1.0.5"
bitvec = "0.21"
line_drawing = "0.8"
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
euc = "0.5.0"
#vek = { version = "0.12.1", default-features = false, features = ["rgb", "rgba"] }
minilp = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rrt"
harness = false

[[bench]]
name = "prm"
harness = false

[[bench]]
name = "bitvec"
harness = false